# libigl-example-project

./: CMakeLists.txt  main.cpp  mainlibigl.cpp
amal'scode/: CMakeLists.txt  main.cpp
